--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.5.1"
+    },
+    "dependencies": {
+        "eslint-config-standard": "^17.1.0"
     }
 }
