Nuevas mejoras multisite y licencias

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,6 +20,10 @@
     "/images/1717357894.png": "/images/1717357894.png",
     "/images/1717357910.png": "/images/1717357910.png",
     "/images/1717401339.jpg": "/images/1717401339.jpg",
+    "/images/1717853228.jpg": "/images/1717853228.jpg",
+    "/images/1717853250.jpg": "/images/1717853250.jpg",
+    "/images/1717853399.jpg": "/images/1717853399.jpg",
+    "/images/1717856463.jpg": "/images/1717856463.jpg",
     "/images/favicon-16x16.png": "/images/favicon-16x16.png",
     "/images/favicon-32x32.png": "/images/favicon-32x32.png",
     "/images/fondo_calendario.png": "/images/fondo_calendario.png",
