Activación de licencia, permisos de rol y mejoras en aplicación

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -26,6 +26,8 @@
     "/images/1717856463.jpg": "/images/1717856463.jpg",
     "/images/favicon-16x16.png": "/images/favicon-16x16.png",
     "/images/favicon-32x32.png": "/images/favicon-32x32.png",
+    "/images/favicon-eldespiste-16x16.png": "/images/favicon-eldespiste-16x16.png",
+    "/images/favicon-eldespiste-32x32.png": "/images/favicon-eldespiste-32x32.png",
     "/images/fondo_calendario.png": "/images/fondo_calendario.png",
     "/images/logo-despiste-nav.png": "/images/logo-despiste-nav.png",
     "/images/logo-despiste.png": "/images/logo-despiste.png",
