--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -31,7 +31,94 @@
     "/images/1718139533.jpg": "/images/1718139533.jpg",
     "/images/1718139579.jpg": "/images/1718139579.jpg",
     "/images/1718221244.jpg": "/images/1718221244.jpg",
+    "/images/1718379622.png": "/images/1718379622.png",
     "/images/1718395986.png": "/images/1718395986.png",
+    "/images/1718440475.png": "/images/1718440475.png",
+    "/images/1718440499.png": "/images/1718440499.png",
+    "/images/1718440517.png": "/images/1718440517.png",
+    "/images/1718441366.jpg": "/images/1718441366.jpg",
+    "/images/1718441411.png": "/images/1718441411.png",
+    "/images/1718441433.png": "/images/1718441433.png",
+    "/images/1718441588.png": "/images/1718441588.png",
+    "/images/1718441664.png": "/images/1718441664.png",
+    "/images/1718441705.png": "/images/1718441705.png",
+    "/images/1718441777.png": "/images/1718441777.png",
+    "/images/1718441810.png": "/images/1718441810.png",
+    "/images/1718441863.png": "/images/1718441863.png",
+    "/images/1718441898.png": "/images/1718441898.png",
+    "/images/1718442016.png": "/images/1718442016.png",
+    "/images/1718442057.png": "/images/1718442057.png",
+    "/images/1718442251.png": "/images/1718442251.png",
+    "/images/1718442272.png": "/images/1718442272.png",
+    "/images/1718442309.png": "/images/1718442309.png",
+    "/images/1718442355.png": "/images/1718442355.png",
+    "/images/1718442375.png": "/images/1718442375.png",
+    "/images/1718442412.png": "/images/1718442412.png",
+    "/images/1718442474.png": "/images/1718442474.png",
+    "/images/1718442532.png": "/images/1718442532.png",
+    "/images/1718442553.png": "/images/1718442553.png",
+    "/images/1718442607.png": "/images/1718442607.png",
+    "/images/1718442628.png": "/images/1718442628.png",
+    "/images/1718442671.png": "/images/1718442671.png",
+    "/images/1718442698.png": "/images/1718442698.png",
+    "/images/1718442762.png": "/images/1718442762.png",
+    "/images/1718442786.png": "/images/1718442786.png",
+    "/images/1718442821.png": "/images/1718442821.png",
+    "/images/1718442892.png": "/images/1718442892.png",
+    "/images/1718442917.png": "/images/1718442917.png",
+    "/images/1718442972.png": "/images/1718442972.png",
+    "/images/1718442998.png": "/images/1718442998.png",
+    "/images/1718443026.jpg": "/images/1718443026.jpg",
+    "/images/1718443059.png": "/images/1718443059.png",
+    "/images/1718443086.png": "/images/1718443086.png",
+    "/images/1718443120.png": "/images/1718443120.png",
+    "/images/1718443202.png": "/images/1718443202.png",
+    "/images/1718455163.png": "/images/1718455163.png",
+    "/images/1718455225.png": "/images/1718455225.png",
+    "/images/1718455258.png": "/images/1718455258.png",
+    "/images/1718455286.png": "/images/1718455286.png",
+    "/images/1718455330.png": "/images/1718455330.png",
+    "/images/1718455395.png": "/images/1718455395.png",
+    "/images/1718455469.png": "/images/1718455469.png",
+    "/images/1718455531.png": "/images/1718455531.png",
+    "/images/1718455554.png": "/images/1718455554.png",
+    "/images/1718455581.png": "/images/1718455581.png",
+    "/images/1718455691.png": "/images/1718455691.png",
+    "/images/1718455750.png": "/images/1718455750.png",
+    "/images/1718455783.png": "/images/1718455783.png",
+    "/images/1718455808.png": "/images/1718455808.png",
+    "/images/1718455837.png": "/images/1718455837.png",
+    "/images/1718455895.png": "/images/1718455895.png",
+    "/images/1718455942.png": "/images/1718455942.png",
+    "/images/1718456110.png": "/images/1718456110.png",
+    "/images/1718456141.png": "/images/1718456141.png",
+    "/images/1718456167.png": "/images/1718456167.png",
+    "/images/1718456194.png": "/images/1718456194.png",
+    "/images/1718456228.png": "/images/1718456228.png",
+    "/images/1718456254.png": "/images/1718456254.png",
+    "/images/1718456323.png": "/images/1718456323.png",
+    "/images/1718456351.png": "/images/1718456351.png",
+    "/images/1718456817.png": "/images/1718456817.png",
+    "/images/1718456841.png": "/images/1718456841.png",
+    "/images/1718456865.png": "/images/1718456865.png",
+    "/images/1718456893.png": "/images/1718456893.png",
+    "/images/1718456912.png": "/images/1718456912.png",
+    "/images/1718456938.png": "/images/1718456938.png",
+    "/images/1718475198.png": "/images/1718475198.png",
+    "/images/1718475500.png": "/images/1718475500.png",
+    "/images/1718475593.png": "/images/1718475593.png",
+    "/images/1718479911.png": "/images/1718479911.png",
+    "/images/1718481508.png": "/images/1718481508.png",
+    "/images/1718603904.png": "/images/1718603904.png",
+    "/images/1718603954.png": "/images/1718603954.png",
+    "/images/1718603999.png": "/images/1718603999.png",
+    "/images/1718604039.png": "/images/1718604039.png",
+    "/images/1718611856.png": "/images/1718611856.png",
+    "/images/1718613908.jpg": "/images/1718613908.jpg",
+    "/images/1718654201.jpg": "/images/1718654201.jpg",
+    "/images/1718890267.png": "/images/1718890267.png",
+    "/images/1718910361.png": "/images/1718910361.png",
+    "/images/1718917133.png": "/images/1718917133.png",
     "/images/favicon-16x16.png": "/images/favicon-16x16.png",
     "/images/favicon-32x32.png": "/images/favicon-32x32.png",
     "/images/favicon-eldespiste-16x16.png": "/images/favicon-eldespiste-16x16.png",
