Arreglar error con selección de artículos

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -119,6 +119,7 @@
     "/images/1718890267.png": "/images/1718890267.png",
     "/images/1718910361.png": "/images/1718910361.png",
     "/images/1718917133.png": "/images/1718917133.png",
+    "/images/1725781064.jpg": "/images/1725781064.jpg",
     "/images/favicon-16x16.png": "/images/favicon-16x16.png",
     "/images/favicon-32x32.png": "/images/favicon-32x32.png",
     "/images/favicon-eldespiste-16x16.png": "/images/favicon-eldespiste-16x16.png",
