fix: Eliminar credenciales de Firebase del repositorio
- Agregado firebase-credentials.json al .gitignore
- Eliminado archivo de credenciales del tracking de git
- Agregadas reglas para otros archivos sensibles (.env, *.key, *.pem)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules
+
+# Firebase credentials (contiene secrets de Google Cloud)
+storage/firebase-credentials.json
+
+# Otros archivos sensibles
+.env
+.env.backup
+.env.production
+*.key
+*.pem
