--- a/public/eldespiste/__manifest.json
+++ b/public/eldespiste/__manifest.json
@@ -1,14 +1,32 @@
 {
-    "name": "MEZZIX",
-    "short_name": "MEZZIX",
-    "version": "1.0.1",
-    "description": "Sistema de gestión gastronómica profesional",
-    "start_url": "/?source=pwa&v=1.0.1",
+    "name": "El Despiste",
+    "short_name": "El Despiste  ",
+    "version": "1.0.0",
+    "description": "Asociación Cultural y Gastronómica El Despiste",
+    "start_url": "/?source=pwa&v=1.0.0",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#dc3545",
     "orientation": "portrait-primary",
     "icons": [
+        {
+            "src": "/images/icons/icon-24x24.png",
+            "sizes": "24x24",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/images/icons/icon-32x32.png",
+            "sizes": "32x32",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
+        {
+            "src": "/images/icons/icon-48x48.png",
+            "sizes": "48x48",
+            "type": "image/png",
+            "purpose": "any maskable"
+        },
         {
             "src": "/images/icons/icon-72x72.png",
             "sizes": "72x72",
@@ -63,7 +81,7 @@
             "name": "Tokens",
             "short_name": "Fichas",
             "description": "Acceso directo a fichas",
-            "url": "/",
+            "url": "/fichas",
             "icons": [
                 {
                     "src": "/images/icons/icon-96x96.png",
